[package]
name = "emu8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.1"
env_logger = "0.9.0"
log = "0.4.17"
wgpu = "0.12.0"
pollster = "0.2.5"
bytemuck = { version = "1.9.1", features = [ "derive" ] }
timer = "0.2.0"
chrono = "0.4.19"
byteorder = "1.4.3"
rand = "0.8.5"

[profile.release]
strip = true
lto = true
codegen-units = 1